--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Nothing Archive (web)</title>
     <link rel="stylesheet" href="css/nothing.css">
     <script src="js/nothing.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/logo/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/logo/favicon-16x16.png">
-    <link rel="icon" href="/img/logo/favicon.ico">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo/favicon-16x16.png">
+    <link rel="icon" href="img/logo/favicon.ico">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#EFEFEF" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#14151F" media="(prefers-color-scheme: dark)">
 </head>
