--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/logo/favicon-16x16.png">
     <link rel="icon" href="img/logo/favicon.ico">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#EFEFEF" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#14151F" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 </head>
 
 <body>
